All features done

--- a/about.html
+++ b/about.html
@@ -291,8 +291,8 @@
               <p>
                 <i class="fa fa-map-marker"></i>You can contact us here......
               </p>
-              <p><i class="fa fa-phone"></i>Number</p>
-              <p><i class="fa fa-envelope"></i>info.housing-co@gmail.com</p>
+              <p><i class="fa fa-phone"></i>+91 95xxxxxxxx</p>
+              <p><i class="fa fa-envelope"></i>priyan.kotwal@kea.com</p>
               <p><i class="fa fa-clock-o"></i>Mon - Sun, 08 AM-08 PM -</p>
             </div>
           </div>
