--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
     <!-- Hero section -->
     <section class="hero-section set-bg" data-setbg="img/bg.jpg">
       <div class="container hero-text text-white">
+		
+		
+		<h2>.</h2>
         <h2>find your place with our local life style</h2>
         <p>
           Search real estate property records, houses, condos, land and more on
@@ -287,8 +290,8 @@
               <p>
                 <i class="fa fa-map-marker"></i>You can contact us here......
               </p>
-              <p><i class="fa fa-phone"></i>Number</p>
-              <p><i class="fa fa-envelope"></i>info.housing-co@gmail.com</p>
+              <p><i class="fa fa-phone"></i>+91 95xxxxxxxx</p>
+              <p><i class="fa fa-envelope"></i>priyan.kotwal@kea.com</p>
               <p><i class="fa fa-clock-o"></i>Mon - Sat, 08 AM - 06 PM</p>
             </div>
           </div>
