--- a/contact.html
+++ b/contact.html
@@ -210,8 +210,8 @@
               <p>
                 <i class="fa fa-map-marker"></i>You can contact us here......
               </p>
-              <p><i class="fa fa-phone"></i>Number</p>
-              <p><i class="fa fa-envelope"></i>info.housing-co@gmail.com</p>
+              <p><i class="fa fa-phone"></i>+91 95xxxxxxxx</p>
+              <p><i class="fa fa-envelope"></i>priyan.kotwal@kea.com</p>
               <p><i class="fa fa-clock-o"></i>Mon - Sat, 08 AM - 06 PM</p>
             </div>
           </div>
